1998-09-04  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* objectbase.h (val_t): Add _short and _ushort.

	* VarProbe.m ([VarProbe -createEnd]): Add short and unsigned short.
	Use variable to hold type tag.
	([VarProbe -probeAsPointer:]): Add char, unsigned char, short and
	unsigned short.
	([VarProbe -probeAsInt:]): Add short and unsigned short.
	([VarProbe -probeAsString:Buffer:withFullPrecision:]): Likewise.
	([VarProbe -setData:To:]): Likewise.
	([VarProbe -setData:ToString:]): Likewise.

	* MessageProbe.m ([MessageProbe -setArg:ToString:]): Add short
	and unsigned short.  Unsigned int was improperly tagged a int.
	(dynamicCallOn): Add char, short, and unsigned short types (all
	cases).
	([MessageProbe -doubleDynamicCallOn:]): Add char, short, and unsigned
	short types.

1998-09-03  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Arguments.m ([Arguments +createArgc:Argv:]): Construct version
	string from getVersion and application name.  Set bug address
	fro getBugAddress.

	* Arguments.[mh] ([Arguments -getVersion], [Arguments -getBugAddress]):
	New methods.

	* objectbase.h: Advertise above.

	* objectbase.h (val_t): Add _uint, _ulong, and _long.

	* VarProbe.m ([VarProbe -createEnd]): Add support for long
	and unsigned long.
	([VarProbe -probeAsPointer:]): Likewise.
	([VarProbe -probeAsInt:]): Likewise.
	([VarProbe -probeAsDouble:]): Likewise.
	([VarProbe -probeAsString:Buffer:withFullPrecision:]): Likewise.
	([VarProbe -setData:To:]): Likewise.
	([VarProbe -setData:ToString:]): Likewise.

	* MessageProbe.m ([MessageProbe -setArg:ToString:]): Add
	support for unsigned int, long, and unsigned long.
	(dynamicCallOn): Likewise.
	([MessageProbe -doubleDynamicCallOn:]): Likewise.

	* Arguments.m ([Arguments -parseKey:arg:]): --mode option
	incorrectly tagged `a' (now `m').

1998-08-24  Marcus G. Daniels  <mgd@wijiji.santafe.edu>

	* Makefile.am (CURRENT): Increment.  Swarm 1.3 released.
	(version.h): Only use sed for extracting version components.
